Connects with MySQL database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+#spring.datasource.url=jdbc:mysql://localhost/point_to_point?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost/point_to_point?createDatabaseIfNotExist=true
+spring.datasource.username=alcides
+spring.datasource.password=123456
