--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.datasource.url=jdbc:mysql://localhost/point_to_point?createDatabaseIfNotExist=true
 spring.datasource.username=alcides
 spring.datasource.password=123456
+
+#spring.jpa.show-sql=true 
